# dagestani-predictor

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/parsed/sample/: events.jsonl  fight_details.jsonl  fighters.jsonl  fights.jsonl
src/: __init__.py  cli.py  config.py  predict.py  train.py
src/api/: __init__.py  app.py
src/dagestani_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: __init__.py  build_dataset.py  elo.py  features.py  normalize.py
src/models/: calibrate.py  evaluate.py  train.py
src/scraping/: __init__.py  fetch.py  parse_event_fights.py  parse_events.py  parse_fight_details.py  parse_fighters.py
tests/: test_no_leakage.py  test_parsing_smoke.py
tests/fixtures/: event_fights.html  events.html  fight_detail.html  fighter.html
