[project]
name = "dagestani-predictor"
version = "0.1.0"
description = "Scrape UFC Stats and train fight outcome models"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
